# HCI-557-CG

./: .gitignore  LICENSE  README.md
01_HelloOpenGL/: CMakeLists.txt  main.cpp
02_Glwf_Window/: CMakeLists.txt  main.cpp
03_SimpleModel/: CMakeLists.txt  controls.cpp  controls.h  main.cpp
04_Transformation/: CMakeLists.txt  transformation_main.cpp
05_Transformation_Extended/: CMakeLists.txt  transformation_main.cpp
06_Lighting/: CMakeLists.txt  main_lighting.cpp  per_vertex_light.fs  per_vertex_light.vs
06_Per_Pixel_Light/: CMakeLists.txt  main_lighting.cpp  per_fragment_light.fs
07_SpotLight/: CMakeLists.txt  GLSphereSpot.cpp  GLSphereSpot.h  main_spotlight.cpp
07_Spotlight/: per_fragment_spotlight.fs  per_fragment_spotlight.vs
08_DirectLight/: CMakeLists.txt  GLSphereDirect.cpp  GLSphereDirect.h  main_directlight.cpp
09_Multiple_Lights/: CMakeLists.txt  lit_scene.fs  main.cpp
09_Multiple_Lights_deprecated/: CMakeLists.txt  Sphere3D.h  main_multlight.cpp
10_Transparency_Blending/: CMakeLists.txt  main_transparency.cpp
11_Simple_Textures/: CMakeLists.txt  main_simple_texture.cpp  main_texture_example.cpp  texture_program.fs  texture_program.vs
12_Texture_Filter/: CMakeLists.txt  main_texture_filter.cpp  texture_filter_program.fs  texture_filter_program.vs
13_Multi_Texturing/: CMakeLists.txt  main_multi_texture.cpp  main_multi_texture_example.cpp  multi_texture_program.fs
14_MipMap_Texturing/: CMakeLists.txt  main_mipmap_texture.cpp  main_mipmap_texture_example.cpp  mipmap_texture.fs  mipmap_texture.vs
15_Projective_Texture/: CMakeLists.txt  main.cpp  projective_texture_program.fs  projective_texture_program.vs
16_Camera_Manipulation/: CMakeLists.txt  main_camera_manipulaton.cpp
18_Envioronment_Mapping/: CMakeLists.txt  lit_scene.vs  main.cpp  main_environment_mapping.cpp  spherical_map.fs  spherical_map.vs
19_Bump_Mapping/: CMakeLists.txt  main_bump_mapping.cpp
19_Normal_Mapping/: CMakeLists.txt  main.cpp  normal_map_program.fs  normal_map_program.vs
20_Model_Loader/: CMakeLists.txt  main_model_loader_example.cpp
21_Ray_Intersection_Test/: CMakeLists.txt  main_ray_intersecton_test.cpp
22_Navigation/: CMakeLists.txt  SphereInt3D.cpp  SphereInt3D.h  main_navigation.cpp
23_Simple_Keyframes/: CMakeLists.txt  main.cpp
25_Morphing/: CMakeLists.txt  main.cpp  main_morphing_example.cpp  morphing_program.fs  morphing_program.vs
25_Morphing/models/: dphn2.mtl
26_Picking/: CMakeLists.txt  main_picking.cpp
28_Bezier_Surface/: Bezier.cpp  Bezier.h  CMakeLists.txt  main_Bezier_Surface.cpp
29_Smoothstep/: CMakeLists.txt  main_smoothstep.cpp
30_Multipass_basic/: CMakeLists.txt  CreateRenderToTexture.h  LoadAndCreateObj.cpp  LoadAndCreateObj.h  LoadAndCreateTexture.h  LoadBitMapFile.h  main.cpp  scene.fs  scene.vs  scene_hidden.fs  scene_hidden.vs
31_Class_Example/: CMakeLists.txt  ModelBox.h  ModelCoordinateSystem.h  OpenGLDefaults.cpp  ShaderProgram.cpp  ShaderProgram.h  ShaderSource.h  TrackballControls.h  VertexBuffers.cpp  Window.cpp  main.cpp
32_ShadowMap/: CMakeLists.txt  display.fs  display.vs  light.fs  light.vs  lit_scene.fs  lit_scene.vs  main.cpp  shadow_scene.fs  shadow_scene.vs
34_PBR_BRDF_Light/: CMakeLists.txt  brdf_shader.fs  brdf_shader.vs  main_pbr.cpp
35_PBR_BRDF_Texture/: CMakeLists.txt  brdf_ibl_shader.fs  brdf_tex_shader.fs  brdf_tex_shader.vs  main_pbr.cpp  sphere_t.mtl
SDK/: CMakeLists.txt  glewConfig.cmake  glmConfig.cmake  glmVersion.cmake
SDK/cmake/: FindGlew.cmake  FindGlfw3.cmake  FindGlm.cmake  glfw3Config.cmake  glmConfig.cmake
SDK/glew-1.13.0/: CMakeLists.txt
SDK/glew-1.13.0/src/: glewConfig.cmake.in
SDK/glfw-3.1.1/: CMakeLists.txt
SDK/glfw-3.1.1/docs/: Doxyfile
SDK/glfw-3.1.1/src/: CMakeLists.txt
SDK/glm-0.9.6.3/: CMakeLists.txt  CTestTestfile.cmake
SDK/glm-0.9.6.3/test/: CTestTestfile.cmake  cmake_install.cmake
SDK/glm-0.9.6.3/util/: CTestTestfile.cmake  cmake_install.cmake
SDK/lib/Release/: glfw.lib
assignments/01_3D_Modeling/: CoordSystem.h  controls.h
assignments/02_3D_Modeling/: CMakeLists.txt  CoordSystem.cpp  HCI557Common.cpp  HCI557Common.h  controls.cpp  hw2_main.cpp
assignments/02_Light_and_Material/: CMakeLists.txt  Sphere3D.cpp  hw2_main.cpp
assignments/02_Programming_and_3D_Modeling/: CMakeLists.txt  HCI557Common.cpp  HCI557Common.h  controls.cpp  hw2_main.cpp
data/: teapot.mtl
data/shaders/: directlight.fs  directlight.vs  displacement_texture.fs  displacement_texture.vs  mipmap_texture_glsl3.fs  mipmap_texture_glsl4.fs  multi_pixel_lights.fs  multi_texture.fs  multi_vertex_lights.vs  single_texture.fs  smoothstep_lights.vs  spherical_mapping.fs  spherical_mapping.vs  spotlight.fs  spotlight.vs  texture_filter.fs  (+1 more)
gl_common/: Box3D.cpp  Box3D.h  CoordSystem.cpp  CoordSystem.h  GLAppearance.cpp  GLAppearance.h  GLAppearanceBase.h  GLColoredBox.cpp  GLColoredBox.h  GLObject.cpp  GLObject.h  GLObjectObj.cpp  GLObjectObj.h  GLObjects3D.h  GLSphere.cpp  GLSphere.h  GLSurface.cpp  GLSurface.h  HCI557Common.cpp  HCI557Common.h  HCI557Datatypes.cpp  HCI557Datatypes.h  ModelObj.cpp  ModelObj.h  Plane3D.cpp  Plane3D.h  RayIntersectionTest.cpp  RayIntersectionTest.hpp  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  camera.cpp  camera.h  controls.cpp  controls.h
gl_common_ext/: BMPLoader.cpp  BMPLoader.h  BRDFLoader.cpp  BRDFLoader.h  BRDFTypes.h  CameraControls.cpp  CameraControls.h  CommonTypes.h  ControlsBase.h  FileUtils.cpp  FileUtils.h  FilesystemCheck.h  MatrixUtils.h  ModelBSMorphing.cpp  ModelBSMorphing.h  ModelBox.cpp  ModelBox.h  ModelBoxN.cpp  ModelBoxN.h  ModelCoordinateSystem.cpp  ModelOBJ.cpp  ModelOBJ.h  ModelPlane.cpp  ModelPlane.h  ModelSphere.cpp  ModelSphere.h  ModelSurface.cpp  ModelSurface.h  OBJLoader.h  OpenGLDefaults.cpp  OpenGLDefaults.h  RenderToTexture.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TrackballControls.cpp  TrackballControls.h  VertexBuffers.cpp  VertexBuffers.h  (+2 more)
videos/: Direct_Light.mov  Direct_Light2.mov  Transparency_correct_rendering_order.mov  Transparency_wrong_rendering_order.mov
(+2 files in other folders)
